# 3DViewer

./: README.md  README_RUS.md
materials/: instructions_for_testing.md
src/: CMakeLists.txt  Makefile  main.cc  settings.h
src/controller/: controllerFacade.h
src/desktop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/dvi/: Documentation.html
src/model/: modelBuilder.h
src/model/affineTransformations/: affineStrategy.cc  affineStrategy.h
src/model/parser/: parser.cc  parser.h
src/tests/: test.cc
src/view/: CMakeLists.txt  mainwindow.cc  mainwindow.h  mainwindow.ui  myopenglwidget.cc  myopenglwidget.h
src/view/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/view/shaders_lines/: fragment_shader_lines.glsl  geometry_shader_lines.glsl  vertex_shader_lines.glsl
